k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-api-svc
spec:
  type: ClusterIP
  selector:
    app: aks-api
  ports:
  - port: 80
    targetPort: 80
